# netbox-aws-resources-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
docs/models/: aws_account.md  aws_load_balancer.md  aws_subnet.md  aws_target_group.md  aws_vpc.md
models/aws_account/: index.html
models/aws_load_balancer/: index.html
models/aws_subnet/: index.html
models/aws_target_group/: index.html
models/aws_vpc/: index.html
netbox_aws_resources_plugin/: __init__.py  admin.py  filtersets.py  forms.py  models.py  navigation.py  search.py  tables.py  urls.py  views.py
netbox_aws_resources_plugin/api/: serializers.py  urls.py  views.py
netbox_aws_resources_plugin/data/: az_data.json  instance_data.json  region_data.json
netbox_aws_resources_plugin/forms/: __init__.py  account.py  ec2.py  load_balancer.py  subnet.py  target_group.py  vpc.py
netbox_aws_resources_plugin/migrations/: 0001_initial.py  0002_awsaccount_parent_account.py  0003_alter_awsaccount_name_awsvpc_awssubnet_and_more.py  0004_alter_awsloadbalancer_options_and_more.py  0005_alter_awsloadbalancer_arn.py  0006_alter_awssubnet_aws_vpc_alter_awssubnet_name_and_more.py  (+8 more)
scripts/: update_instance_data.py  update_region_data.py
search/: search_index.json
tests/: __init__.py  test_netbox_aws_resources_plugin.py
(+10 files in other folders)
