# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-aws-resources-plugin"
version = "0.1.0"
authors = [
    {name = "Jordan Keith", email = "jordan@iopc.com.au"},
]
description = "NetBox plugin for AWS Resources."
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

requires-python = ">=3.10.0"

[project.optional-dependencies]
test = [
    "black==24.3.0",
    "check-manifest==0.49",
    "flake8",
    "flake8-pyproject",
    "pre-commit==3.7.0",
    "pytest==8.1.1",
]

[project.urls]
Documentation = "https://github.com/zeddD1abl0/netbox-aws-resources-plugin/blob/main/README.md"
Source = "https://github.com/zeddD1abl0/netbox-aws-resources-plugin"
Tracker = "https://github.com/zeddD1abl0/netbox-aws-resources-plugin/issues"

[tool.black]
line-length = 120
target_version = ['py39', 'py310', 'py311', 'py312']

[tool.setuptools.package-data]
netbox_aws_resources_plugin = ["templates/**"]
